--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -8,7 +8,7 @@ on:
       - 'feature/*'
 
 env:
-  MONGO_URI: "mongodb+srv://sypercluster.d83jj.monogodb.net/superData"
+  MONGO_URI: "mongodb+srv://supercluster.d83jj.monogodb.net/superData"
   MONGO_USERNAME: ${{ vars.MONGO_USERNAME}}
   MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
     
