--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -6,6 +6,7 @@ on:
     branches:
       - main
       - 'feature/*'
+      - 'main'
 
 env:
   MONGO_URI: 'mongodb+srv://supercluster.d83jj.monogodb.net/superData'
