--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -6,11 +6,10 @@ on:
     branches:
       - main
       - 'feature/*'
-      - 'main'
 
 env:
   MONGO_URI: 'mongodb+srv://supercluster.d83jj.monogodb.net/superData'
-  MONGO_USERNAME: ${{ vars.MONGO_USERNAME}}
+  MONGO_USERNAME: ${{ vars.MONGO_USERNAME }}
   MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
     
 jobs:
@@ -33,6 +32,7 @@ jobs:
           run: npm test
           
         - name: Archive Test Result
+          if: always()
           uses: actions/upload-artifact@v4
           with:
             name: Mocha-Test-Result
