--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -37,3 +37,29 @@ jobs:
           with:
             name: Mocha-Test-Result
             path: test-results.xml
+
+    code-coverage:
+        name: Code Coverage
+        runs-on: ubuntu-latest
+        steps:
+        - name: Checkout Repository
+          uses: actions/checkout@v4
+
+        - name: Setup NodeJS Version
+          uses: actions/setup-node@v3
+          with:
+            node-version: 20
+    
+        - name: Install Dependencies
+          run: npm install
+    
+        - name: Code coverage testing
+          run: npm run code-coverage
+          
+        - name: Archive Test Result
+          if: always()
+          uses: actions/upload-artifact@v4
+          with:
+            name: code-Coverage-Result
+            path: coverage
+            retention-days: 5
